--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -1,3 +1,27 @@
+.nav__list {
+  margin: 0;
+  padding: 0;
+  width: 300px;
+  display: flex;
+  justify-content: space-evenly;
+  list-style-type: none;
+}
+
+.nav__link {
+  color: #fff;
+  font-size: 16px;
+  text-decoration: none;
+  text-transform: uppercase
+}
+
+.nav__item {
+  font-size: 14px;
+  font-weight: 600;
+  position: relative;
+  text-decoration: none;
+  text-transform: uppercase
+}
+
 .active {
-  color: red;
+  color: #e3796a;
 }
