--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,9 +1,14 @@
 .header {
   display: flex;
   align-items: center;
-  justify-content: flex-end;
+  justify-content: space-between;
   width: 100%;
   height: 50px;
   background-color: #232529;
   border-bottom: 4px solid #35383f;
+}
+
+.header__logo {
+  display: block;
+  padding: 0 0 0 15px;
 }
