--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,9 +1,15 @@
 .footer {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-around;
   height: 50px;
   width: 100%;
   background-color: #232529;
   border-top: 4px solid #35383f;
+  font-size: 16px;
+}
+
+.footer__school_logo:hover {
+  transform: scale(1.15);
+  transition: 0.3s;
 }
