--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
+@font-face {
+  font-family: "Trajan"; 
+  src: url("../../fonts/Trajan.ttf") format("truetype"); 
+  font-style: normal; 
+  font-weight: normal; 
+}
+
 body {
   margin: 0;
   padding: 0;
