--- a/src/pages/HomePage/HomePage.css
+++ b/src/pages/HomePage/HomePage.css
@@ -54,14 +54,15 @@ button:focus {
 }
 
 .card__container {
-  padding: 25px 0 25px 0;
   display: grid;
-  grid-template-columns: repeat(4, 200px);
-  gap: 30px 30px;
-  justify-items: center;
+  grid-template-columns: auto auto auto auto;
+  justify-content: center;
+  padding: 15px;
+  text-align: center;
 }
 
 .card {
+  margin: 20px;
   width: 180px;
   display: flex;
   flex-direction: column;
