--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -3,13 +3,21 @@
   align-items: center;
   justify-content: space-between;
   width: 100%;
-  height: 50px;
+  height: 60px;
   background-color: #232529;
   border-bottom: 4px solid #35383f;
 }
 
 .header__logo {
+  width: 60px;
+  height: 60px;
   display: block;
-  padding: 0 0 0 15px;
+  padding: 0 0 0 55px;
   cursor: pointer;
+  filter: opacity(2);
+}
+
+.header__logo:hover {
+  filter: blur(0.5px);
+  transition: 0.5s;
 }
