--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -22,6 +22,11 @@
   text-transform: uppercase
 }
 
-.active {
-  color: #e3796a;
+.active:before {
+  background-color: #e3796a;
+  bottom: -10px;
+  content: "";
+  height: 3px;
+  position: absolute;
+  width: 100%;
 }
