--- a/src/pages/FormPage/FormPage.css
+++ b/src/pages/FormPage/FormPage.css
@@ -9,7 +9,7 @@
 .form {
   margin: 10px 0;
   padding: 10px 10px;
-  width: 350px;
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -20,7 +20,7 @@
 
 .input_text, .input_text:focus {
   height: 20px;
-  width: 55%;
+  width: 30%;
   background-color: #25282a;
   border: 1px solid rgba(255, 255, 255, 0.265);
 }
@@ -143,8 +143,33 @@ input[type="file" i] {
 
 .form__checkbox {
   margin: 5px auto;
+  display: flex;
+}
+
+.form__flex {
+  display: flex;
+  align-items: center;
+}
+
+.form__flex_font {
+  font-size: 14px;
+}
+
+.input__margin {
+  margin: 0 5px;
 }
 
 .padding {
   padding: 5px 0;
+}
+
+.label__margin {
+  margin: 0 5px 0 0;
+}
+
+.wrong {
+  display: flex;
+  align-items: center;
+  font-size: 12px;
+  color: #e3796a;
 }
