feat: fix styles

--- a/src/index.css
+++ b/src/index.css
@@ -17,10 +17,11 @@ body {
   padding: 0;
   background-image: url(./assets/dota_back.jpg);
   background-size: 100% auto;
-  background-repeat: no-repeat;
+  background-repeat: no-repeat; 
   background-position: center top;
   background-attachment: fixed;
   position: relative;
+  background-color: #232529;
   color: #fff;
   font-family: Inter,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,sans-serif;
 }
