--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -15,6 +15,7 @@
   justify-content: space-around;
   background-color: #2325299d;
   box-shadow: 1px 11px 14px 3px rgba(0,0,0,0.82);
+  cursor: pointer;
 }
 
 .card:hover {
